--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 language: ruby
-rvm: 2.0.0
+rvm:
+  - 2.0.0
+bundler_args: --without development production
+before_script:
+  - cp config/database.example.yml config/database.yml
+  - bundle exec rake db:create db:migrate
+script:
+  - bundle exec rake
