Enable notifications to HipChat from Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ before_script:
   - bundle exec rake db:create db:migrate
 script:
   - bundle exec rake
+notifications:
+  hipchat:
+    rooms:
+      secure: ZsbGo01XeILxFX6PAdJfDe0qmsrhG9pBur3jbARhrvps6hMxxhDfPZrMv7S1Iecr6MAp+cizqdBH6zRR3q8aJzo0wEfUbnY1vNUjpk5bMdN2V3Lhx83BUC7MmwKLqoGB2u5RT/6CUEoJ3UFS8DnJ3VKrOdXhdoFpMlSoCCnblss=
