--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: ruby
 rvm:
-  - 2.0.0
-bundler_args: --without development production
+- 2.0.0
+bundler_args: --without development production staging
 before_script:
-  - cp config/database.example.yml config/database.yml
-  - bundle exec rake db:create db:migrate
+- cp config/database.example.yml config/database.yml
+- bundle exec rake db:create db:migrate
 script:
-  - bundle exec rake
+- bundle exec rake
 notifications:
   hipchat:
     rooms:
       secure: SaT47XcSVYhU7MD2bPX3Bzx0W074fqd4ydaTI2c8qCXN23wMPdrVuUCx/6EnJT5JNlFffsyRilQu/88o4auhWOtjaOkORSSMJtZqZ+7eUnYoBfShhFJ1YzmAE4woHOGQSGcvQba1/ZI9G6uLe6izCRAIOZZTS7U2O4Cl4KkiWgU=
+deploy:
+  provider: heroku
+  api_key:
+    secure: KwgmOnxQAdAANcY0irlChi5qPp5dhbxcukre1zxAEIMYO4c7CW8nsgRkt20pKOXDHhtihTH0SpKgdWPBqMtdDMS2Esuwutz5jAZcja4lhWA22/h6ZhooyNBpEc5eU+VCkEG0PezaWlI1ygR461xUcApKVUtQhPOXJICOKJSGWd4=
+  app:
+    master: chaplin
+    staging: chaplin-staging
+  on:
+    rvm: 2.0.0
