--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ruedap/chaplin#readme",
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "@zeit/ncc": "^0.22.3"
   }
 }
