--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/ruedap/chaplin#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
-    "@zeit/ncc": "^0.22.3"
+    "@zeit/ncc": "^0.22.3",
+    "jest": "^26.2.2",
+    "ts-jest": "^26.1.4"
   }
 }
