--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.0.27",
     "@zeit/ncc": "^0.22.3",
     "jest": "^26.2.2",
-    "ts-jest": "^26.1.4"
+    "ts-jest": "^26.1.4",
+    "typescript": "^3.9.7"
   }
 }
