build(npm): Add exec command to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "exec": "npx ncc run ./src/index.ts",
     "test": "jest"
   },
   "repository": {
