--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
+    "@types/twitter": "^1.7.0",
     "@zeit/ncc": "^0.22.3",
     "jest": "^26.2.2",
     "ts-jest": "^26.1.4",
