refactor: Refactor tweet() for production

--- a/.github/workflows/tweet-staging-debug.yml
+++ b/.github/workflows/tweet-staging-debug.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           node-version: '12'
       - run: npm install
-      - run: npm run tweet:debug
+      - run: npm run tweet -- --debug
