--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
           node-version: '12'
       - run: npm install
       - run: npm test
-      - run: npm run tweet:debug
+      - run: npm run tweet -- --debug
