build(actions): Add env for GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,8 @@ jobs:
       - run: npm install
       - run: npm test
       - run: npm run tweet -- --debug
+        env:
+          STAGING_TWITTER_CONSUMER_KEY: ${{ secrets.STAGING_TWITTER_CONSUMER_KEY }}
+          STAGING_TWITTER_CONSUMER_SECRET: ${{ secrets.STAGING_TWITTER_CONSUMER_SECRET }}
+          STAGING_TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.STAGING_TWITTER_ACCESS_TOKEN_KEY }}
+          STAGING_TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.STAGING_TWITTER_ACCESS_TOKEN_SECRET }}
