--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@zeit/ncc": "^0.22.3",
+    "date-fns": "^2.15.0",
+    "date-fns-tz": "^1.0.10",
     "twitter": "^1.7.1"
   }
 }
