--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx ncc build ./src/index.ts",
-    "tweet": "npm run build && node ./dist/index.js",
+    "tweet": "npm run build && TZ='UTC' node ./dist/index.js",
+    "tweet:debug": "npm run tweet -- --debug",
     "test": "jest"
   },
   "repository": {
