--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@zeit/ncc": "^0.22.3",
     "proposal-temporal": "^0.8.0",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "twitter-api-client": "^1.3.7"
   }
 }
