--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "chaplin",
+  "name": "chaplin-bot",
+  "private": true,
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
