--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ruedap/chaplin.git"
+    "url": "git+https://github.com/ruedap/chaplin-bot.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ruedap/chaplin/issues"
+    "url": "https://github.com/ruedap/chaplin-bot/issues"
   },
-  "homepage": "https://github.com/ruedap/chaplin#readme",
+  "homepage": "https://github.com/ruedap/chaplin-bot#readme",
   "devDependencies": {
     "@types/jest": "26.0.22",
     "@types/node": "14.14.41",
