--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "chaplin-bot",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
